# ROS_Turtlebot_follower2_Python

./: .gitignore  .gitmodules  README.md  colorprofile.py  go_2_position.py  install-meta.sh  requirements.txt  setup.sh  turtlebot_follower_gt.sublime-project  turtlebot_gt.sublime-project
doc/: README.md
src/turtlebot_gt/: CMakeLists.txt  package.xml
src/turtlebot_gt/docs/: turtlebot_follower_gtDepthConfig-usage.dox  turtlebot_gtDepthConfig.dox  turtlebot_gtDepthConfig.wikidoc
src/turtlebot_gt/launch/: cam_single.launch  profiler.launch  turtlebot.launch
src/turtlebot_gt/src/: go_dir.py  move.py  obj_depth_track.py  profiler.py  profiler_server.py  simple_follower.py  tennisball.py  tracker.py  wanderer.py
src/turtlebot_gt/src/turtlebot_gt/cfg/: turtlebot_gt_DepthConfig.py
turtlebot_follower_gt/: CMakeLists.txt  package.xml
turtlebot_follower_gt/launch/: turtlebot.launch
turtlebot_follower_gt/msg/: Depth.msg
turtlebot_follower_gt/src/: colorprofile.py
turtlebot_gt/: CMakeLists.txt  package.xml  setup.py
turtlebot_gt/cfg/: Depth.cfg
turtlebot_gt/launch/: turtlebot.launch
turtlebot_gt/msg/: Depth.msg
turtlebot_gt/src/: obj_depth_track.py  simple_pub.py  simple_subscriber.py  wanderer.py
